@@ -8,6 +8,7 @@ Every release contains many small fixes.
 * PageStore: limit history length
 * Html Frontend: Exception handling
 * Html Frontend: handling of long during actions
+* Frontend: split html content in url / html
 
 === 1.19.1.0
 * JsonFrontend: better meta information and title
